# tutodo

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 12ad88f74f47_add_foreign_key_to_tasks.py  99e7b6a3eea3_initial_postgres.py  f03b7dc8a6f4_add_foreign_key_to_tags.py
app/: config.py  database.py  dependencies.py  helpers.py  main.py
app/tasks/: __init__.py  models.py  router.py  serializers.py  use_cases.py
app/templates/: base.html  index.html  project_list.html  task_list.html
app/tests/: fixtures.py  test_tasks.py
app/users/: __init__.py  router.py
